Another height fix that is apparently necessary. #ScrollbarsSuck

--- a/ta.css
+++ b/ta.css
@@ -272,6 +272,7 @@ body {
 
 html {
     width: 100%;
-    height: 99vh;
+    height: 100%;
+    overflow-y: hidden;
     overflow-x: hidden;
 }
